# mycraft

./: .gitignore  CMakeLists.txt  Makefile
src/: block_library.cpp  camera.hpp  chunk_manager.cpp  fps_counter.cpp  fps_counter.hpp  mycraft.cpp  player.cpp  player.hpp  ray_caster.cpp  renderer.cpp  shader.cpp  shader.hpp  shaders.cpp  textures.cpp
